--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,12 @@
   <body>
     <header>
      <% if user_signed_in? %>
-      <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
+        
+        <%= link_to "マイページ", mypage_path %>
+      
       <!--ここまで、ログインしている時-->
+      
       <!--ここから、ログインしていない時-->
      <% else %>
         <%= link_to "新規登録", new_user_registration_path %>
