--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
 <% if user_signed_in? && @user == current_user %>
-  <h1>マイページ</h1>
+  <h1><%= @user.email %>のマイページ</h1>
+  <!--マイページの場合に表示されたい内容-->
+  このログインユーザーの投稿一覧
+  プロフィール編集ボタン
+  
 <% else %>
   <h1>ユーザーページ</h1>
+  ユーザーの名前
+  ユーザーの投稿一覧
 <% end %>
-
-<h1><%= @user.email %></h1>
