--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
-<% if user_signed_in? && @user == current_user %>
-  <h1><%= @user.email %>のマイページ</h1>
-  <!--マイページの場合に表示されたい内容-->
-  このログインユーザーの投稿一覧
-  プロフィール編集ボタン
+<!--<%# if user_signed_in? %>-->
+<!--  <h1><%#= @user.email %>のマイページ</h1>-->
+<!--  マイページの場合に表示されたい内容-->
+<!--  このログインユーザーの投稿一覧-->
+<!--  プロフィール編集ボタン-->
   
-<% else %>
+<%# else %>
   <h1>ユーザーページ</h1>
   ユーザーの名前
   ユーザーの投稿一覧
-<% end %>
+<%# end %>
+
+<!--&& @user == current_user-->
