--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,15 @@
 
   <body>
     <header>
-     <% if user_signed_in? %>
+     <% if user_signed_in? && @user == current_user %>
+    
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
         
         <%= link_to "マイページ", mypage_path %>
       
-      <!--ここまで、ログインしている時-->
+      <!--ここまで、ログインしている時の表示-->
       
-      <!--ここから、ログインしていない時-->
+      <!--ここから、ログインしていない時の表示-->
      <% else %>
         <%= link_to "新規登録", new_user_registration_path %>
       
