[add]userモデルにusername追加

--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,6 +1,6 @@
-<% if user_signed_in? && @user == current_user %>
-  <h1><%= @user.email %>のマイページ</h1>
-  マイページの場合に表示されたい内容
-  このログインユーザーの投稿一覧
-  プロフィール編集ボタン
+<!--<%# if user_signed_in? && @user == current_user %>-->
+<!--  <h1><%#= @user.email %>のマイページ</h1>-->
+<!--  マイページの場合に表示されたい内容-->
+<!--  このログインユーザーの投稿一覧-->
+<!--  プロフィール編集ボタン-->
   
