--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -17,9 +17,9 @@
     <!--  </ul>-->
     <!--<%# end %>-->
    <br>
-   <%= link_to "Log in ", new_user_session_path %>
+   <%= link_to "ログイン", new_user_session_path %>
    </br>
-   <%= link_to "Sign up", new_user_registration_path %>
+   <%= link_to "新規登録", new_user_registration_path %>
    
 
   <h2>推し巡り</h2>
