--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? && @user == current_user %>
-  <h1><%= @user.password %>のマイページ</h1>
+  <h1><%= @user.username %>のマイページ</h1>
   マイページの場合に表示されたい内容
   このログインユーザーの投稿一覧
   プロフィール編集ボタン
