--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,15 @@
 <% if user_signed_in? && @user == current_user %>
-  <h1><%= @user.username %>のマイページ</h1>
+  <h1>マイページ</h1>
+  <h2>ユーザー名：<%= @user.username %></h2>
+  
+  <p>自分の投稿一覧</p>
   マイページの場合に表示されたい内容
-  このログインユーザーの投稿一覧
   プロフィール編集ボタン
   
 <% else %>
-  <h1>ユーザーページ</h1>
-  ユーザーの名前
-  ユーザーの投稿一覧
+  <h1>ユーザー詳細ページ</h1>
+  <h2>ユーザー名：<%= @user.username %></h2>
+  
+  <p>ユーザーの投稿一覧</p>
 <% end %>
 
