--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
         
-        <%= link_to "マイページ", mypage_path %>
+        <%= link_to "マイページ", users_mypage_path %>
       
       <!--ここまで、ログインしている時の表示-->
       
