--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,15 +7,12 @@
  <body>
   <h1>推し巡り</h1>
   
- <!--バリデーション-->
-    <%# if @user.errors.any? %>
-      <%#= @user.errors.count %>
-    <!--  <ul>-->
-        <%# @user.errors.full_messages.each do |message| %>
-          <%#= message %>
-        <%# end %>
-    <!--  </ul>-->
-    <!--<%# end %>-->
+ 
+   <br>
+   <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
+   <%#= link_to 'ゲストログイン（閲覧用）', homes_guest_sign_in_path, method: :post %>
+    <%#= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %>
+   </br>
    <br>
    <%= link_to "ログイン", new_user_session_path %>
    </br>
