--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,12 @@
 <h1>投稿ページ</h1>
 <%= form_with model: @post do |f| %>
-  <h4>タイトル</h4>
+　<h4>画像</h4>
+  <%= f.file_field :image, accept: "image/*" %>
+  
+  <h4>施設や道の場所</h4>
   <%= f.text_field :title %>
   
-  <h4>本文</h4>
+  <h4>文章</h4>
   <%= f.text_area :body %>
 	
 	<p>
