[add]投稿、詳細ページの編集

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,10 @@
   <h1>マイページ</h1>
   <h2>ユーザー名：<%= @user.username %></h2>
   
+  <%= link_to "プロフィール編集", edit_user_path(@user.id) %>
+  
   <p>自分の投稿一覧</p>
-  マイページの場合に表示されたい内容
-  プロフィール編集ボタン
+  
   
 <% else %>
   <h1>ユーザー詳細ページ</h1>
