--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,19 @@
+ <%# if user_signed_in? && @user == current_user %>
 <h1>投稿ページ</h1>
-<%= form_with model: @post do |f| %>
+<% if @post.errors.any? %>
+  <%= @post.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @post.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+ <%= form_with model: @post do |f| %>
 　<h4>画像</h4>
   <%= f.file_field :image, accept: "image/*" %>
   
-  <h4>施設や道の場所</h4>
+  <h4>施設や道の場所名</h4>
   <%= f.text_field :title %>
   
   <h4>文章</h4>
@@ -12,4 +22,5 @@
 	<p>
   <%= f.submit '投稿' %>
   </p>
-<% end %>
+ <% end %>
+<%# end %>
