--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,8 +9,8 @@
    
   <div>
   <%= link_to post_path(post.id) do %>
-    <%#= image_tag post_path :image %>
-    <%= image_tag post_path :image, size: "300x300"%>
+    <%= image_tag post_path :image %>
+    <%#= image_tag post_path :image, size: "300x300"%>
   <% end %>
   
    
