[add]投稿削除機能作成中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,14 @@
        
        <!--<%#= link_to "ユーザー詳細", user_path(@user) %>-->
        
-      
+    　<p>
+      ヘッダー
+      </p>
      <%# if user_signed_in? && @user == current_user %>
      <% if user_signed_in? %>
-    
+      
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        
+       
         <%= link_to "マイページ", users_mypage_path %>
         
          <%= link_to "新規投稿", new_post_path %>
