--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,5 @@
  <h1>投稿詳細ページ</h1>
- 
- <%= flash[:notice] %>
+ <p><%= flash[:notice] %></p>
  
  <!--投稿画像-->
 <%= image_tag @post.image, size: "300x300" %>
