[add]posts#create編集

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -21,7 +21,7 @@
      </p> 
      
      <p>
-       <label for="inputBody">文章</label>
+       <label for="inputBody">投稿文</label>
       <%= f.text_area :body, autofocus: true, id:"inputBody", placeholder:"投稿したい文"%>
      </p>
      <p>
