--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,6 +30,13 @@
     <!--自己紹介文-->
   
     <h2>ユーザーの投稿一覧</h2>
+    <% @posts.each do |post| %>
+  <!--投稿画像のみ表示-->
+   <%= link_to post_path(post.id) do %>
+　  <%= image_tag post.image, size: "300x300" %>
+　 <% end %>
+　　 　
+  <% end %>
   
   <% end %>
 
