--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 <!--プロフィール写真-->
 <%= @user.profile_image %> 
 <h2>ユーザー名：<%= @user.username %></h2>
-<!--自己紹介、入力すれば出てくる-->
+<!--自己紹介-->
 <h4>自己紹介：<%= @user.introduction %></h4>
  <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
 
@@ -28,14 +28,13 @@
    
     <h2>ユーザー名：<%= @user.username %></h2>
     <!--自己紹介文-->
-  
+    <h4>自己紹介：<%= @user.introduction %></h4>
     <h2>ユーザーの投稿一覧</h2>
     <% @posts.each do |post| %>
   <!--投稿画像のみ表示-->
    <%= link_to post_path(post.id) do %>
 　  <%= image_tag post.image, size: "300x300" %>
 　 <% end %>
-　　 　
   <% end %>
   
   <% end %>
