[add]ログイン新規登録画面の日本語化

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,21 +5,26 @@
  </head>
   
  <body>
-  <h1>推し巡り</h1>
+  <!--ナビ-->
   <!--ログアウトフラッシュメッセージ-->
    <p><%= flash[:notice] %></p>
  
    <br>
-   <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
+   <div><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %></div>
    </br>
    <br>
    <%= link_to "ログイン", new_user_session_path %>
    </br>
    <%= link_to "新規登録", new_user_registration_path %>
    
-
-  <h2>推し巡り</h2>
-   説明
+<!--メイン-->
+  <h2>〜推し巡りとは〜</h2>
+   このウェブサイトは、いわゆる推しが訪れた場所を聖地巡礼して、</br>
+   そのオタ活を投稿して情報発信することを目的としたコミュニティーサイトです。</br>
+   投稿検索などで他の聖地巡礼スポットを発見したり、</br>
+   ユーザー検索で検索したユーザーの投稿一覧などを見ることができます。</br>
+   皆さんにとって、もっと楽しいオタ活ライフになる１つのサイトとなれたらと思います。
+   
 
  </body>
 </html>
