--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>推し巡り</title>
+    <link rel="stylesheet" href="../../assets/stylesheets/application.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,21 +13,18 @@
 
   <body>
     <header>
-       <!--<%#= link_to "マイページ", mypage_path %>-->
-       
-       <!--<%#= link_to "ユーザー詳細", user_path(@user) %>-->
-       
-    　<p>
-      ヘッダー
-      </p>
+      <h1>押し巡り</h1>
+    　<!--<h1>押し巡り</h1>-->
+    
      <%# if user_signed_in? && @user == current_user %>
      <% if user_signed_in? %>
-      
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-       
-        <%= link_to "マイページ", users_mypage_path %>
-        
-         <%= link_to "新規投稿", new_post_path %>
+      <%= link_to "新規投稿", new_post_path %>
+      <%= link_to "マイページ", users_mypage_path %>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+         
+         <!--ユーザー検索ボタン-->
+         
+         <!--投稿検索ボタン-->
         
       <!--ここまで、ログインしている時の表示-->
       
@@ -37,6 +35,7 @@
         <%= link_to "ログイン", new_user_session_path %>
      <% end %>
     </header>
+    
     <%= yield %>
   </body>
 </html>
