--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="ja">
- <head>
-   <link rel="stylesheet" href="../../assets/stylesheets/top.css"/>
- </head>
+
+ 
   
- <body>
+ 
   <!--ナビ-->
   <!--ログアウトフラッシュメッセージ-->
    <p><%= flash[:notice] %></p>
- 
+   
+  <div class="main-visual">
    <br>
    <div><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %></div>
    </br>
@@ -16,15 +14,18 @@
    <%= link_to "ログイン", new_user_session_path %>
    </br>
    <%= link_to "新規登録", new_user_registration_path %>
-   
+  </div>
+  
 <!--メイン-->
+ <main>
+  <div>
   <h2>〜推し巡りとは〜</h2>
-   このウェブサイトは、いわゆる推しが訪れた場所を聖地巡礼して、</br>
+   このウェブサイトは、いわゆる推しが訪れた場所を聖地巡礼して</br>
    そのオタ活を投稿して情報発信することを目的としたコミュニティーサイトです。</br>
-   投稿検索などで他の聖地巡礼スポットを発見したり、</br>
+   投稿検索などで他の聖地巡礼スポットを発見したり</br>
    ユーザー検索で検索したユーザーの投稿一覧などを見ることができます。</br>
    皆さんにとって、もっと楽しいオタ活ライフになる１つのサイトとなれたらと思います。
-   
+  </div>
+ </main>
 
- </body>
-</html>
+ 
