--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -5,6 +5,22 @@
   color: #6c6b6b;
 }
 
-h1{
-  color:red;
+.main-visual {
+  width: 100%; 
+  height: 150px;
+  background-color: #F5F5F5	;
+  text-align: center;
 }
+
+main {
+  width: 100%; /* 横幅800px */
+  display: flex;
+  text-align: center;
+  justify-content: center; 
+  align-items:center;
+  /* 要素の横並び・中央寄せ 
+  margin: 0 auto; /* 要素の中央揃え */
+  padding: 80px 0; 
+}
+
+
