--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <h1>押し巡り</h1>
+      <div class= "title">押し巡り</div>
     
      <%# if user_signed_in? && @user == current_user %>
      <div class="header-bottom">
