--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -7,19 +7,23 @@
 
 .main-visual {
   width: 100%; 
-  height: 150px;
+  /*height: 150px;*/
   background-color: #F5F5F5	;
   text-align: center;
 }
 
+.flash {
+   text-align: left;
+   background-color: color:red;
+}
+
+
 main {
-  width: 100%; /* 横幅800px */
+  width: 100%;
   display: flex;
   text-align: center;
   justify-content: center; 
   align-items:center;
-  /* 要素の横並び・中央寄せ 
-  margin: 0 auto; /* 要素の中央揃え */
   padding: 80px 0; 
 }
 
