[add]post,showレイアウト編集

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,7 +2,7 @@
   <!--ナビ-->
   <!--ログアウトフラッシュメッセージ-->
   
-  <div class="main-visual">
+  <div class="main-visual1">
    <div class="flash">
    <p><%= flash[:notice] %></p>
    </div>
