--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>投稿編集ページ</h1>
+<head>
+  <link rel="stylesheet" href="../../assets/stylesheets/users_edit.css" />
+</head>
+
+<div>投稿編集ページ</div>
  <!--投稿の更新失敗バリデーション-->
     <% if @post.errors.any? %>
       <%= @post.errors.count %>件のエラー
