--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="../../assets/stylesheets/users_edit.css" />
+</head>
+
 <h1>プロフィール編集</h1>
  <!--プロフィールの更新失敗バリデーション-->
     <% if @user.errors.any? %>
