--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -7,14 +7,18 @@
 
 .main-visual1 {
   width: 100%; 
-  /*height: 150px;*/
+  height: 220px;
   background-color: #F5F5F5	;
   text-align: center;
 }
 
 .flash {
-   text-align: left;
-   background-color: color:red;
+   text-align: center;
+   padding-top:20px;
+}
+
+.log_in{
+  margin:10px;
 }
 
 
