--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -9,8 +9,9 @@
    <br>
    <div><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %></div>
    </br>
-   <br>
-   <%= link_to "ログイン", new_user_session_path %>
+   <div class="log_in">
+    <%= link_to "ログイン", new_user_session_path %>
+   </div>
    </br>
    <%= link_to "新規登録", new_user_registration_path %>
   </div>
