--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,10 @@
+<!--<head>-->
+<!--  <link rel="stylesheet" href="../../assets/stylesheets/top.css" />-->
+<!--</head>-->
 
-  <!--ナビ-->
-  <!--ログアウトフラッシュメッセージ-->
-  
-  <div class="main-visual1">
+<body>
+   <div class="main-visual1">
+   <!--ログアウトフラッシュメッセージ-->
    <div class="flash">
    <p><%= flash[:notice] %></p>
    </div>
@@ -18,9 +20,9 @@
   
 <!--メイン-->
  <main>
-  <div>
-  <h2>〜推し巡りとは〜</h2>
-  <br>
+  <div class="oshimeguri_introduce">〜推し巡りとは〜</div>
+  
+  <div class="oshimeguri_introduce2">
    このウェブサイトは、いわゆる推しが訪れた場所を聖地巡礼して、</br>
    そのオタ活を投稿して情報発信することを目的としたコミュニティーサイトです。</br>
    投稿検索などで他の聖地巡礼スポットを発見したり、</br>
@@ -30,5 +32,6 @@
   <!--この辺りに感じがわかる写真貼り付けたい-->
   
  </main>
+ </body>
 
  
