--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
       <!--ここから、ログインしていない時の表示-->
      <% else %>
      <div class="header-bottom">
+       <%= link_to "トップ", root_path %>
        <%= link_to "新規登録", new_user_registration_path %>
        <%= link_to "ログイン", new_user_session_path %>
      <% end %>
