--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -36,11 +36,12 @@ main {
   font-size: 30px;
   font-family: HiraMinProN-W6;
   color: black;
-  
 }
 
 .oshimeguri_introduce2{
   margin-top: 20px;
+  margin-left: 300px;
+  margin-right: 300px;
   color: white;
   font-family: HiraMinProN-W6;
   letter-spacing:3px;
