--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -25,7 +25,7 @@
       <%= f.text_field :title, autofocus: true, id:"inputTitle", placeholder:"お店の名前など"%>
      </div>
      
-     <div class="edit_post">
+     <div class="edit_bo">
        <label for="inputBody">投稿文</label></br>
       <%= f.text_area :body, autofocus: true, id:"inputBody", placeholder:"投稿したい文"%>
      </div>
