--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,8 @@
- <%# if user_signed_in? && @user == current_user %>
-<h1>投稿ページ</h1>
+ <head>
+  <link rel="stylesheet" href="../../assets/stylesheets/posts_new.css" />
+</head>
+
+<div class="post_page">投稿ページ</div>
 <% if @post.errors.any? %>
   <%= @post.errors.count %>件のエラーが発生しました
   <ul>
@@ -10,16 +13,18 @@
 <% end %>
 
  <%= form_with model: @post do |f| %>
-　<h4>投稿画像</h4>
+　<div class="post_new_image">投稿画像</br>
   <%= f.file_field :image, accept: "image/*" %>
+  </div>
   
-  <h4>施設や道の場所名</h4>
+  <div class="post_new_title">施設や道の場所名</br>
   <%= f.text_field :title %>
+  </div>
   
-  <h4>投稿文</h4>
+  <div class="post_new_body">投稿文</br>
   <%= f.text_area :body %>
+	</div>
 	
-	<p>
-  <%= f.submit '投稿' %>
-  </p>
+	<div class="post_button"><%= f.submit '投稿' %></div>
+  
  <% end %>
