[add]ログイン新規登録画面レイアウト調整

--- a/app/assets/stylesheets/posts_new.css
+++ b/app/assets/stylesheets/posts_new.css
@@ -12,6 +12,10 @@
   font-family: Hiragino Sans W6;
 }
 
+.errors{
+  text-align: center;
+}
+
 .post_new_image{
   text-align: center;
   margin-top: 50px;
