--- a/app/assets/stylesheets/sign_up.css
+++ b/app/assets/stylesheets/sign_up.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.log_in{
+.new_post{
   text-align: center; 
   margin-top: 30px;
   margin-bottom: 10px;
@@ -12,15 +12,7 @@
   font-family: Hiragino Sans W6;
 }
 
-.field_user_name{
-   text-align: center;
-   margin-top: 50px;
-  margin-bottom: 20px;
-  font-size: 20px;
-  font-family: Hiragino Sans W6;
-}
-
-.field_password{
+.field{
    text-align: center;
    margin-top: 50px;
   margin-bottom: 20px;
