--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2>パスワードを忘れましたか？</h2>
+<div class="forget_password">パスワードを忘れましたか？</div>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -12,5 +12,6 @@
     <%= f.submit "パスワードリセット手順を送信" %>
   </div>
 <% end %>
-
+<div class="render_links">
 <%= render "devise/shared/links" %>
+</div>
