--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,3 +34,8 @@
   <div class="edit_update"><%= f.submit "更新" %></div>
   
  <% end %>
+ 
+ <div class="withdrawal">
+  <%= link_to "退会する",user_path(current_user.id), class: "destroy-user", method: :delete, "data-confirm" => "本当に退会しますか？" %>
+ </div> 
+
