--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
-<!--<head>-->
-<!--  <link rel="stylesheet" href="../../assets/stylesheets/top.css" />-->
-<!--</head>-->
+<head>
+  <link rel="stylesheet" href="../../assets/stylesheets/top.css" />
+</head>
 
 <body>
    <div class="main-visual1">
