--- a/app/assets/stylesheets/users_show.css
+++ b/app/assets/stylesheets/users_show.css
@@ -64,6 +64,6 @@ font-family: HiraMinProN-W6;
    width: auto;
 }
 
-/*.a{*/
-/*  padding: 10px;*/
-/*}*/
+body {
+  background-image: image-url("hoge.jpg");
+}
