--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <div class= "title">押し巡り</div>
+      <div class= "title">推し巡り</div>
     
      <div class="header-bottom">
      <% if user_signed_in? %>
