cssファイル変更

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
  <head>
-  <link rel="stylesheet" href="../../assets/stylesheets/posts_new.css" />
+  <%= stylesheet_link_tag 'posts_new'%>
 </head>
 
 <div class="post_page">投稿ページ</div>
