--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../../assets/stylesheets/posts_show.css" />
+ <%= stylesheet_link_tag 'posts_show'%>
 </head>
 
  <div class="post_show">投稿詳細ページ</div>
