--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../../assets/stylesheets/users_edit.css" />
+ <%= stylesheet_link_tag 'users_edit'%>
 </head>
 
 <div class="profile_edit">プロフィール編集</div>
