--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../../assets/stylesheets/sign_up.css" />
+ <%= stylesheet_link_tag 'sign_up'%>
 </head>
 
 <div class="new_post">新規登録</div>
