--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../../assets/stylesheets/posts_edit.css" />
+  <%= stylesheet_link_tag 'posts_edit'%>
 </head>
 
 <div class="post_edit">投稿編集ページ</div>
