--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="../../assets/stylesheets/users_show.css" />
+ <%= stylesheet_link_tag 'users_show'%>
 </head>
 
 <body>
