--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -33,5 +33,9 @@
      
      <div class=edit_update><%= f.submit "更新" %></div>
      
+     <div class="edit_delete">
+　　  <%= link_to "投稿削除",post_path(@post.id), method: :delete, "data-confirm"=>"本当に削除しますか？" %>
+　　 </div>
+     
       
      <% end %>
