投稿詳細にユーザー詳細リンク実装

--- a/app/assets/stylesheets/posts_show.scss
+++ b/app/assets/stylesheets/posts_show.scss
@@ -15,6 +15,15 @@
   text-align: center;
 }
 
+.show_profile{
+  text-align: center;
+}
+
+.post_user_name{
+  text-align: center;
+}
+
+
 .show_img{
    text-align: center;
    padding: 20px;
