--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
      <div class="header-bottom">
      <% if user_signed_in? %>
       <%= link_to "新規投稿", new_post_path %>
+      <%= link_to "検索", posts_path %>
       <%= link_to "マイページ", users_mypage_path %>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
      </div>  
