--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,10 @@
+投稿検索
+
+ユーザー検索
+
 投稿一覧
 <% @posts.each do |post| %>
-<%= link_to user_path(post.user_id) do %>
-  <%= image_tag @post.image, size: "300x300" %>
+ <%= link_to post_path(post.id) do %>
+  <%= image_tag post.image, size: "300x300" %>
+ <% end %>
 <% end %>
