投稿一覧ページ編集

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,14 +4,12 @@
 
 <!--投稿とユーザーはリンクにすること-->
 <div class="main-visual">
-投稿検索
-
- ユーザー検索
-
+ <div class="">投稿検索</div>
+ <div class="">ユーザー検索</div>
 </div>
 
 <main>
-<div class="post.all">投稿一覧</div>
+<div class="post_all">投稿一覧</div>
 <% @posts.each do |post| %>
  <%= link_to post_path(post.id) do %>
   <%= image_tag post.image, size: "300x300" %>
