--- a/app/assets/stylesheets/posts_index.scss
+++ b/app/assets/stylesheets/posts_index.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  // color: #6c6b6b;
+  color: #6c6b6b;
 }
 
 .main-visual{
@@ -10,12 +10,13 @@
 }
 
 main{
-  
+  width: 100%;
 }
 
-.post.all{
+.post_all{
  text-align: center;
  padding-top: 10px;
  padding-bottom: 50px;
- font-size: 20px;
+ font-size: 30px;
+ font-family: HiraMinProN-W6;
 }
